# ece786

./: .gitignore  .gitmodules  README.md
.github/workflows/: final.yml  latex.yml  proj1a.yml  proj1b.yml  proj2.yml  proj3a.yml  proj3b.yml
hw/: Makefile  ece786.sty  hw1.tex  hw2.tex  hw3.tex  hw5.tex
latex/: final.tex  proj1.tex  proj2.tex  proj3a.tex  proj3b.tex  references.bib
lecture/: Makefile  memcopy  memcopy.cu
proj/final/: README.md  analysis.sh
proj/final/task1/: ispass_bfs_output.txt  ispass_nqu_output.txt
proj/final/task1/bypass_output/: ispass_lps_output.txt  rodinia_bp_output.txt  rodinia_hp_output.txt  rodinia_lud_output.txt
proj/final/task1/original_output/: ispass_bfs_output.txt  ispass_lps_output.txt  ispass_nqu_output.txt  rodinia_bp_output.txt  rodinia_hp_output.txt  rodinia_lud_output.txt
proj/final/task2/: gpgpusim_entrypoint.cc
proj/final/task2/gpgpu-sim/: shader.cc  shader.h
proj/latex/: .gitignore  proj1.tex
proj/proj1/proj1a/: CMakeLists.txt  Makefile  README.md  benchmark.sh  quamsimV1  quamsimV1.cu  quamsimV2.cu  quantumSimulation.cu  test.sh
proj/proj1/proj1b/: README.md
proj/proj1/vectorAdd/: Makefile
proj/proj2/: README.md  plot.py
proj/proj2/cuda-sim/: instructions.cc
proj/proj2/gpgpu-sim/task3/: shader.cc  shader.h
proj/proj2/gpgpu-sim/task4/: shader.cc  shader.h
proj/proj3/gpgpu-sim/: shader.cc  shader.h
proj/proj3/proj3b/: Makefile  README.md  fuzz_test.py  output_checker.py  plot.py  quamsimV1.cu  quamsimV2.cu  quamsimV3.cu  test.sh
proj1/vectorAdd/: vectorAdd.cu
(+5 files in other folders)
